# snake-m25

./: .gitignore  README.md  SPEC.md  plan.md  prompt.md  pyproject.toml
.github/workflows/: build.yml
src/: main.py
tests/: test_snake.py
