[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-game"
version = "0.1.0"
description = "一款画面精美、操作流畅的贪吃蛇游戏"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Snake Game Team"}
]
keywords = ["game", "snake", "pygame"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Arcade Games",
]

dependencies = [
    "pygame>=2.0.0",
]

[project.scripts]
snake-game = "src.main:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
]

[tool.setuptools]
packages = ["."]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]